[package]
name = "lo-ra-mac-node"
version = "0.1.0"
authors = ["Justin Wernick <justin@worthe-it.co.za>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lo-ra-mac-node-sys = { path = "./lo-ra-mac-node-sys" }

[workspace]
members = [
  "lo-ra-mac-node-sys"
]